--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -74,6 +74,8 @@ RUN conda install pandoc
 
 RUN conda install jax -c conda-forge
 
+RUN conda install r-essentials -c conda-forge
+
 RUN useradd -ms /bin/bash jupyteruser
 USER jupyteruser
 WORKDIR /home/jupyteruser
