Last lectures and Dockerfile for all.

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -92,8 +92,8 @@ ENV JAVA_HOME=/opt/conda
 
 RUN pip install -U ipywidgets
 
-#RUN apt-get update && apt-get install -y \
-#    openmpi-bin openmpi-common libopenmpi-dev
+RUN apt-get update && apt-get install -y \
+    openmpi-bin openmpi-common libopenmpi-dev
 
 RUN useradd -ms /bin/bash jupyteruser
 USER jupyteruser
